[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/base_question_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/main_screens/question_templates/content_slide.gd" type="Script" id=2]
[ext_resource path="res://game/assets/ui/icons/next_arrow.png" type="Texture" id=3]
[ext_resource path="res://game/assets/sounds/button.ogg" type="AudioStream" id=4]

[node name="BaseQuestionPanel" instance=ExtResource( 1 )]
script = ExtResource( 2 )
title = ""
question = ""
content_already_created = false

[node name="SlideContent" type="Control" parent="Panel" index="2"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 72.0
margin_right = -32.0
margin_bottom = -36.0
mouse_filter = 2

[node name="ContentContainer" type="AspectRatioContainer" parent="Panel/SlideContent" index="0"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PrevArrow" type="TextureRect" parent="Panel" index="3"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
anchor_bottom = 1.0
rect_min_size = Vector2( 52, 0 )
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="NextArrow" type="TextureRect" parent="Panel" index="4"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 52, 0 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Click" type="AudioStreamPlayer" parent="." index="6"]
unique_name_in_owner = true
stream = ExtResource( 4 )
